--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>About Redirect Demo<a name="About_Redirect_Demo"></a></h2><a name="About_Redirect_Demo"></a><p>Demo of the cost of HTTP redirects.</p></div>
+        <div class="section"><h2>About Redirect Demo<a name="About_Redirect_Demo"></a></h2><a name="About_Redirect_Demo"></a><p>Demo of the cost of HTTP redirects. You can test it on
+        http://redirect.ledcom.cloudbees.net/</p></div>
       </div>
     </div>
     <div class="clear">
