--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,7 @@
                 <input name="iterations" type="text" placeholder="Number of images to download" />
                 <button class="btn">start test (redirect)</button>
             </div>
-            <div>Time to download all images <span class="result"></span></div>
+            <div>Time to download all images <span class="result">X</span> [ms]</div>
             <ol></ol>
         </div>
         <div id="direct" class="span6">
@@ -40,7 +40,7 @@
                 <input name="iterations" type="text" placeholder="Number of images to download" />
                 <button class="btn">start test (no redirect)</button>
             </div>
-            <div>Time to download all images <span class="result"></span></div>
+            <div>Time to download all images <span class="result">X</span> [ms]</div>
             <ol></ol>
         </div>
     </div>
